fix(alert-message): only show alert-message scrollbar when necessary

--- a/src/components/alert/alert.scss
+++ b/src/components/alert/alert.scss
@@ -71,7 +71,7 @@ ion-alert input {
 }
 
 .alert-message {
-  overflow-y: scroll;
+  overflow-y: auto;
 
   -webkit-overflow-scrolling: touch;
 }
